--- a/src/main/resources/templates/denegado.html
+++ b/src/main/resources/templates/denegado.html
@@ -3,26 +3,21 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Identificate</title>
+        <title>Inicio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     </head>
     <body>
 	<div th:insert="fragments/components  :: header"></div>
+	
+	<div style="width: 20%; float:left">
 
-	<div style="width: 100%; float:center">
-    <div id="container">
-        <form action="#" th:action="@{/authenticateTheUser}" method="post">
-            <!-- Username -->
-            <label for="name">Usuario:</label>
-            <input type="name" name="username" placeholder=" Digite su Usuario " required>
-            <!-- Password -->
-            <label for="username">Clave:</label>
-            <input type="password" name="password" placeholder=" Digite su Clave " required>
-            <input type="submit" value="Entrar">
-        </form>       
-    </div>
+   </div>
+
+	<div style="width: 50%; float:right">
+	       Acceso Denegado<br>
+	       <a th:href="@{/principal}"><h4>Regresar</h4>
 	</div>
     
    </body>
