--- a/src/main/resources/templates/blogs.html
+++ b/src/main/resources/templates/blogs.html
@@ -14,16 +14,19 @@
 		<div style="width: 20%; float:left">
         		<b> Menu Principal
 			<ul>
-				<li><a th:href="@{/readers-menu}">
+				<li><a th:href="@{/reader/readers-menu}">
 						<h4>Readers</h4>
 					</a></li>
-				<li><a th:href="@{/blogs-menu}">
+				<li><a th:href="@{/blog/blogs-menu}">
 						<h4>Blogs</h4>
 					</a></li>
-					<li><a th:href="@{/reader-blog-menu}">
+					<li><a th:href="@{/reader-blog/reader-blog-menu}">
 						<h4>Reader por Blog</h4>
 				</a></li>
 			</ul>
+			<form action="#" th:action="@{/logout}" method="POST">
+               <button  type="submit">Cerrar Sesion</button>
+            </form>
    </div>
 
 	<div style="width: 80%; float:right">
@@ -47,13 +50,13 @@
 							<td th:text="${fila.pkBlog}"></td>
 							<td th:text="${fila.title}"></td>
 							<td th:text="${fila.description}"></td>
-							<td><a th:href="@{/blogs-modificar/{id}(id=${fila.pkBlog})}">Modificar</a></td>
-							<td><a th:href="@{/blogs-eliminar-c/{id}(id=${fila.pkBlog})}">Eliminar</a></td>
+							<td><a th:href="@{/blog/blogs-modificar/{id}(id=${fila.pkBlog})}">Modificar</a></td>
+							<td><a th:href="@{/blog/blogs-eliminar-c/{id}(id=${fila.pkBlog})}">Eliminar</a></td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
-			<p><a th:href="@{/blogs-agregar}">Agregar</a></p>
+			<p><a th:href="@{/blog/blogs-agregar}">Agregar</a></p>
 		</div>
 	
 	
