--- a/src/main/resources/templates/principal.html
+++ b/src/main/resources/templates/principal.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Readers</title>
+        <title>Inicio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
@@ -11,7 +11,7 @@
     <body>
 	<div th:insert="fragments/components  :: header"></div>
 	
-		<div style="width: 20%; float:left">
+	<div style="width: 20%; float:left">
         		<b> Menu Principal
 			<ul>
 				<li><a th:href="@{/reader/readers-menu}">
@@ -20,48 +20,18 @@
 				<li><a th:href="@{/blog/blogs-menu}">
 						<h4>Blogs</h4>
 					</a></li>
-					<li><a th:href="@{/reader-blog/reader-blog-menu}">
+				<li><a th:href="@{/reader-blog/reader-blog-menu}">
 						<h4>Reader por Blog</h4>
 				</a></li>
 			</ul>
-			<form action="#" th:action="@{/logout}" method="POST">
+		    <form action="#" th:action="@{/logout}" method="POST">
                <button  type="submit">Cerrar Sesion</button>
             </form>
    </div>
 
-	<div style="width: 80%; float:right">
-	
-		<div th:switch="${readers}">
-			<h2 th:case="null">No existen Registros!</h2>
-			<div th:case="*">
-				<h2>Readers</h2>
-				<table style="width:100%">
-					<thead>
-						<tr>
-							<th>Pk readers</th>
-							<th>Name</th>
-							<th>Modificar</th>
-							<th>Eliminar</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr th:each="fila : ${readers}">
-							<td th:text="${fila.pkReader}"></td>
-							<td th:text="${fila.name}"></td>
-							<td><a th:href="@{/reader/readers-modificar/{id}(id=${fila.pkReader})}">Modificar</a></td>
-							<td><a th:href="@{/reader/readers-eliminar-c/{id}(id=${fila.pkReader})}">Eliminar</a></td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-			<p><a th:href="@{/reader/readers-agregar}">Agregar Reader</a></p>
-		</div>
-	
-	
+	<div style="width: 50%; float:right">
 	
 	</div>
-	
-	
     
    </body>
 </html>
