--- a/src/main/resources/templates/readers-per-blog.html
+++ b/src/main/resources/templates/readers-per-blog.html
@@ -14,16 +14,19 @@
 		<div style="width: 20%; float:left">
         		<b> Menu Principal
 			<ul>
-				<li><a th:href="@{/readers-menu}">
+				<li><a th:href="@{/reader/readers-menu}">
 						<h4>Readers</h4>
 					</a></li>
-				<li><a th:href="@{/blogs-menu}">
+				<li><a th:href="@{/blog/blogs-menu}">
 						<h4>Blogs</h4>
 					</a></li>
-					<li><a th:href="@{/reader-blog-menu}">
+					<li><a th:href="@{/reader-blog/reader-blog-menu}">
 						<h4>Reader por Blog</h4>
 				</a></li>
 			</ul>
+			<form action="#" th:action="@{/logout}" method="POST">
+               <button  type="submit">Cerrar Sesion</button>
+            </form>
    </div>
 
 	<div style="width: 80%; float:right">
@@ -45,15 +48,15 @@
 						<tr th:each="fila : ${conjunto}">
 							<td th:text="${fila.nameReaderRes}"></td>
 							<td th:text="${fila.nameBlogRes}"></td>
-							<td><a th:href="@{/readers-blogs-modificar/
+							<td><a th:href="@{/reader-blog/readers-blogs-modificar/
 								{idBlog}/{idReader} (idBlog=${fila.bIdRes},idReader=${fila.rIdRes}) }">Modificar</a></td>
-							<td><a th:href="@{/readers-blogs-eliminar/
+							<td><a th:href="@{/reader-blog/readers-blogs-eliminar/
 								{idBlog}/{idReader} (idBlog=${fila.bIdRes},idReader=${fila.rIdRes}) }">Eliminar</a></td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
-			<p><a th:href="@{/readers-per-agregar}">Agregar Reader por Blog</a></p>
+			<p><a th:href="@{/reader-blog/readers-per-agregar}">Agregar Reader por Blog</a></p>
 		</div>
 	
 	
